# domain-name-finder

./: .env.example  .gitignore  Dockerfile  docker-compose.build.yml  docker-compose.yml  download_zone_file.sh  log.txt  update_cycle.sh
.github/workflows/: cd.yml
.run/: Run download_zone_file [tools].run.xml  Run server (debug).run.xml  Run server (release).run.xml  Run zone-file-processor (release).run.xml  build [zone-file-processor].run.xml
helm/domain/: Chart.yaml  values.yaml
helm/domain/templates/: NOTES.txt  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
proxy/: nginx.conf  start.sh
server/: Cargo.toml  Dockerfile  output.txt
server/src/: database.rs  database_reader.rs  main.rs  search.rs
tools/: Cargo.toml
tools/src/: lib.rs  process_zone_file.rs
webapp/: nginx.conf  package.json  vite.config.ts
webapp/src/: App.vue
webapp/src/components/: Textbox.vue
webapp/src/lib/: searchHook.ts
zone-file-downloader/: zone-file-downloader.sh
zone-file-processor/: Cargo.toml
zone-file-processor/src/: main.rs
