[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
itertools = "0.10.1"
flate2 = { version = "1.0.22", features = ["zlib-ng-compat"], default-features = false }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
smol_str = "0.1.18"
xz2 = "0.1.6"
seq-macro = "0.3"
peak_alloc = "0.1.0"

# Actix-rt vs Tokio: we can only use the exact same version of Tokio that Actix depends on
actix-web = "4.0.0-rc.3"
actix-rt="2.6.0"
tokio = { version = "1.13.1", features = ["full"] }

[profile.release]
# lto = true