[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
actix-web = "4.0.1"
itertools = "0.10.1"
seq-macro = "0.3"
peak_alloc = "0.1.0"
flate2 = { version = "*", features = ["zlib-ng-compat"], default-features = false }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
awc = "*"

[profile.release]
# lto = true

[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false

