[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
dotenv = "0.15.0"
chrono = "0.4.19"
indicatif = "0.16.2"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["compat"] }
futures-util = "0.3.14"
aws-sdk-s3 = "0.9.0"
aws-config = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
itertools = "0.10.1"
async-stream = "0.3.3"
async-compression = { version = "0.3.12", features = ["zlib"] }