[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
dotenv = "0.15.0"
chrono = "0.4.19"
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "0.6.8", features = ["compat"] }
futures-util = "0.3.14"
aws-sdk-s3 = "0.9.0"
aws-config = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
itertools = "0.10.1"
flate2 = { version = "1.0.22", features = ["zlib-ng-compat"], default-features = false }
async-compression = { version = "0.3.12", features = ["gzip", "tokio"] }
futures = "0.3.17"
pin-project = "1.0.10"
indicatif = "0.16.2"
regex = "1.5.5"
zstd = "0.11.2+zstd.1.5.2"
crossbeam-channel = "0.5.4"
tar = "0.4.38"