[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
dotenv = "0.15.0"
chrono = "0.4.19"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
itertools = "0.10.1"
flate2 = { version = "1.0.22", features = ["zlib-ng-compat"], default-features = false }
indicatif = "0.16.2"
regex = "1.5.5"
zstd = "0.11.2+zstd.1.5.2"
crossbeam-channel = "0.5.4"
