[package]
name = "zone-file-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
itertools = "0.10.1"
#flate2 = "1.0.22"
flate2 = { version = "1.0.22", features = ["zlib-ng-compat"], default-features = false }
tokio = { version = "1.12.0", features = ["full"] }
